devops/monolithic_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolithic-svc
spec:
  selector:
    app: pdf-creator
    type: backend
    name: monolithic
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithic
spec:
  selector:
    matchLabels:
      app: pdf-creator
      type: backend
      name: monolithic
  template:
    metadata:
      labels:
        app: pdf-creator
        type: backend
        name: monolithic
    spec:
      containers:
        - name: monolithic
          image: monolithic:1.2
          imagePullPolicy: Never
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              port: 8080
              path: actuator/health/liveness
            initialDelaySeconds: 90
          readinessProbe:
            httpGet:
              port: 8080
              path: actuator/health/readiness
            initialDelaySeconds: 50
          ports:
            - containerPort: 8080
