devops/pdf_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-svc
spec:
  selector:
    app: pdf-creator
    type: backend
    name: pdf
  ports:
    - port: 80
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf
spec:
  selector:
    matchLabels:
      app: pdf-creator
      type: backend
      name: pdf
  template:
    metadata:
      labels:
        app: pdf-creator
        type: backend
        name: pdf
    spec:
      containers:
        - name: pdf
          image: pdf:1.2
          imagePullPolicy: Never
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              port: 8081
              path: actuator/health/liveness
            initialDelaySeconds: 90
          # There is a known issue with the readiness check when using a CommandLineRunner.
          # readinessProbe:
          #   httpGet:
          #     port: 8081
          #     path: actuator/health/readiness
            # initialDelaySeconds: 50
          ports:
            - containerPort: 8081
