devops/web_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: pdf-creator
    type: frontend
    name: web
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: pdf-creator
      type: frontend
      name: web
  template:
    metadata:
      labels:
        app: pdf-creator
        type: frontend
        name: web
    spec:
      containers:
        - name: pdf-web
          image: pdf-web:1.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
