devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  labels:
    name: default
spec:
  rules:
    - host: pdf-creator.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/users"
            backend:
              service:
                name: monolithic-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/pdfs"
            backend:
              service:
                name: pdf-svc
                port:
                  number: 80
